refactor : 피드백 반영 & Boolean 값 포장 객체(Dot) 생성