@@ -4,6 +4,7 @@ import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.*;
 
@@ -16,14 +17,10 @@ public class PlayersTest {
     @Test
     void createPlayers2() {
         assertThat(new Players(new String[]{"a","b","c","d"})).
-                isEqualTo(new Players(Arrays.asList(
+                isEqualTo(new Players(List.of(
                 new Player("a"),
                 new Player("b"),
                 new Player("c"),
                 new Player("d"))));
     }
-
-
-
-
 }
